[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Actors/Crab/CrabUndead1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Actors/Crab/Crab1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Actors/Crab/Crab2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Actors/Crab/CrabUndead2.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "chase_alive"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "chase_undead"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
z_index = -1
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="EnemySprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = SubResource( 2 )
anims/chase_alive = SubResource( 4 )
anims/chase_undead = SubResource( 3 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
